<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fieldlog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.fieldlog.ui.create.CreateRecordFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create_record" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.fieldlog.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.fieldlog.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="recordId"
            app:argType="integer" />

    </fragment>

</navigation>

